Use JavaScript Standard Style

--- a/package.json
+++ b/package.json
@@ -15,5 +15,15 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "standard": "^11.0.1"
+  },
+  "standard": {
+    "env": {
+      "browser": true,
+      "jest": true,
+      "es6": true
+    }
   }
 }
