--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "jest-fetch-mock": "^1.6.2",
+    "react-testing-library": "^3.1.3",
     "standard": "^11.0.1"
   },
   "standard": {
