--- a/package.json
+++ b/package.json
@@ -2,13 +2,18 @@
   "name": "ebl-frontend",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "yarn": "^1.5.1"
+  },
   "dependencies": {
+    "auth0-js": "^9.6.0",
     "element-react": "^1.4.19",
     "element-theme-default": "^1.4.13",
     "lodash": "^4.17.10",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "react-markdown": "^3.3.2",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4"
   },
   "scripts": {
@@ -18,6 +23,7 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "jest-date-mock": "^1.0.2",
     "jest-fetch-mock": "^1.6.2",
     "react-testing-library": "^3.1.3",
     "standard": "^11.0.1"
