--- a/.env.test
+++ b/.env.test
@@ -1,3 +1,4 @@
 REACT_APP_AUTH0_DOMAIN=example.com
 REACT_APP_AUTH0_CLIENT_ID=test-client-id
 REACT_APP_AUTH0_REDIRECT_URI=http://localhost:3000/callback
+REACT_APP_DICTIONARY_API_URL=http://localhost:8000
