--- a/.env.test
+++ b/.env.test
@@ -1,5 +1,5 @@
 REACT_APP_AUTH0_DOMAIN=example.com
 REACT_APP_AUTH0_CLIENT_ID=test-client-id
-REACT_APP_AUTH0_REDIRECT_URI=http://localhost:3000/callback
-REACT_APP_DICTIONARY_API_URL=http://localhost:8000
+REACT_APP_AUTH0_REDIRECT_URI=http://example.com/callback
+REACT_APP_DICTIONARY_API_URL=http://example.com
 REACT_APP_SENTRY_DSN=
