--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "element-theme-default": "^1.4.13",
     "lodash": "^4.17.10",
     "react": "^16.4.0",
+    "react-bootstrap": "^0.32.1",
     "react-dom": "^16.4.0",
     "react-markdown": "^3.3.2",
     "react-router-dom": "^4.2.2",
