--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "jest-date-mock": "^1.0.2",
+    "jest-dom": "^1.3.1",
     "jest-fetch-mock": "^1.6.2",
     "react-testing-library": "^3.1.3",
     "standard": "^11.0.1"
