--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "auth0-js": "^9.6.0",
     "lodash": "^4.17.10",
+    "query-string": "^6.1.0",
     "react": "^16.4.0",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.4.0",
