--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "factory-girl": "^5.0.2",
     "jest-date-mock": "^1.0.2",
     "jest-dom": "^1.3.1",
     "jest-fetch-mock": "^1.6.2",
