--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "auth0-js": "^9.6.0",
+    "classnames": "^2.2.6",
     "lodash": "^4.17.10",
     "moment": "^2.22.2",
     "query-string": "5",
