--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "yarn": "^1.5.1"
+    "yarn": "^1.5.1",
+    "node": "^10.3.0"
   },
   "dependencies": {
     "auth0-js": "^9.6.0",
