--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "auth0-js": "^9.6.0",
+    "bluebird": "^3.5.2",
     "classnames": "^2.2.6",
     "lodash": "^4.17.10",
     "moment": "^2.22.2",
