Add browserlist to package.json

--- a/package.json
+++ b/package.json
@@ -42,5 +42,11 @@
       "es6": true
     },
     "parser": "babel-eslint"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
