--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jest-date-mock": "^1.0.2",
     "jest-dom": "^1.3.1",
     "jest-fetch-mock": "^1.6.2",
+    "lighthouse": "^3.2.1",
     "react-testing-library": "^5.1.0",
     "standard": "^12.0.1"
   },
