--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "classnames": "^2.2.6",
     "lodash": "^4.17.10",
     "moment": "^2.22.2",
+    "moment-range": "^4.0.1",
     "query-string": "5",
     "react": "^16.4.0",
     "react-bootstrap": "^0.32.1",
