--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "chance": "^1.0.16",
     "factory-girl": "^5.0.2",
     "jest-date-mock": "^1.0.2",
     "jest-dom": "^2.1.0",
