--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
     "react-testing-library": "^5.1.0",
     "standard": "^12.0.1"
   },
+  "resolutions": {
+    "dom-testing-library": "3.1.0"
+  },
   "standard": {
     "env": {
       "browser": true,
