--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "moment-range": "^4.0.1",
     "query-string": "^6.2.0",
     "react": "^16.4.0",
+    "react-ace": "^6.2.0",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.4.0",
     "react-markdown": "^4.0.3",
