--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-markdown": "^4.0.3",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "^2.0.3"
+    "react-scripts": "^2.0.3",
+    "react-select": "^2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
