--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "query-string": "^6.2.0",
     "react": "^16.4.0",
     "react-ace": "^6.2.0",
-    "react-bootstrap": "^0.32.1",
+    "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "^16.4.0",
     "react-markdown": "^4.0.3",
     "react-router-bootstrap": "^0.24.4",
