--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "auth0-js": "^9.6.0",
     "bluebird": "^3.5.2",
     "classnames": "^2.2.6",
+    "immutable": "^4.0.0-rc.12",
     "lodash": "^4.17.10",
     "moment": "^2.22.2",
     "moment-range": "^4.0.1",
