--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "node": "^10.3.0"
   },
   "dependencies": {
+    "@sentry/browser": "^4.6.3",
     "auth0-js": "^9.6.0",
     "bluebird": "^3.5.2",
     "citation-js": "^0.4.0-11",
