--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lighthouse": "node scripts/lighthouse.js"
   },
   "devDependencies": {
     "chance": "^1.0.16",
