--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lighthouse": "node scripts/lighthouse.js"
+    "lighthouse": "node scripts/lighthouse.js",
+    "format": "prettier-standard src/**/*.js"
   },
   "devDependencies": {
     "chance": "^1.0.16",
@@ -43,6 +44,7 @@
     "jest-dom": "^3.0.0",
     "jest-fetch-mock": "^2.1.0",
     "lighthouse": "^4.1.0",
+    "prettier-standard": "^9.1.1",
     "react-testing-library": "^6.0.0",
     "standard": "^12.0.1"
   },
