--- a/package.json
+++ b/package.json
@@ -1,4 +1,26 @@
 {
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "linters": {
+      "{src,lib,test,tests,__tests__,bin}/**/*.js": [
+        "prettier-standard",
+        "standard --fix",
+        "git add"
+      ]
+    }
+  },
+  "scripts": {
+    "format": "prettier-standard src/**/*.js",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "lighthouse": "node scripts/lighthouse.js"
+  },
   "name": "ebl-frontend",
   "version": "0.1.0",
   "private": true,
@@ -28,22 +50,16 @@
     "react-scripts": "^2.0.3",
     "react-select": "^2.1.2"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "lighthouse": "node scripts/lighthouse.js",
-    "format": "prettier-standard src/**/*.js"
-  },
   "devDependencies": {
     "chance": "^1.0.16",
     "factory-girl": "^5.0.2",
     "flow-bin": "^0.97.0",
+    "husky": "^2.3.0",
     "jest-date-mock": "^1.0.2",
     "jest-dom": "^3.0.0",
     "jest-fetch-mock": "^2.1.0",
     "lighthouse": "^4.1.0",
+    "lint-staged": "^8.1.7",
     "prettier-standard": "^9.1.1",
     "react-testing-library": "^6.0.0",
     "standard": "^12.0.1"
