Ignore snapshots when formatting

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
         "prettier-standard",
         "standard --fix",
         "git add"
-      ]
+      ],
+      "ignore": ["**/__snapshots__/*"]
     }
   },
   "scripts": {
