--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
         "standard --fix",
         "git add"
       ],
-      "ignore": ["**/__snapshots__/*"]
+      "ignore": [
+        "**/__snapshots__/*"
+      ]
     }
   },
   "scripts": {
@@ -52,7 +54,9 @@
     "react-select": "^2.1.2"
   },
   "devDependencies": {
+    "babel-eslint": "^10.0.1",
     "chance": "^1.0.16",
+    "eslint-plugin-flowtype": "^3.9.1",
     "factory-girl": "^5.0.2",
     "flow-bin": "^0.97.0",
     "husky": "^2.3.0",
@@ -71,7 +75,8 @@
       "jest": true,
       "es6": true
     },
-    "parser": "babel-eslint"
+    "parser": "babel-eslint",
+    "plugins": [ "flowtype" ]
   },
   "browserslist": [
     ">0.2%",
