Update dependency minor and patch versions

--- a/package.json
+++ b/package.json
@@ -75,7 +75,9 @@
       "es6": true
     },
     "parser": "babel-eslint",
-    "plugins": [ "flowtype" ]
+    "plugins": [
+      "flowtype"
+    ]
   },
   "browserslist": [
     ">0.2%",
