Revert "Update dependency minor and patch versions"
This reverts commit c1c257d6

The application failed to compile with following error:

./node_modules/@citation-js/plugin-wikidata/lib-mjs/index.js
Attempted import error: 'parsePropType' is not exported from './prop' (imported as 'prop').

--- a/package.json
+++ b/package.json
@@ -75,9 +75,7 @@
       "es6": true
     },
     "parser": "babel-eslint",
-    "plugins": [
-      "flowtype"
-    ]
+    "plugins": [ "flowtype" ]
   },
   "browserslist": [
     ">0.2%",
