--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-select": "^3.0.4"
   },
   "devDependencies": {
+    "@testing-library/react": "^8.0.1",
     "chance": "^1.0.16",
     "eslint-plugin-flowtype": "^3.9.1",
     "factory-girl": "^5.0.2",
@@ -65,7 +66,6 @@
     "lighthouse": "^5.1.0",
     "lint-staged": "^8.1.7",
     "prettier-standard": "^9.1.1",
-    "react-testing-library": "^6.0.0",
     "standard": "^12.0.1"
   },
   "standard": {
