--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "@sentry/browser": "^5.4.0",
     "auth0-js": "^9.6.0",
     "bluebird": "^3.5.2",
-    "citation-js": "0.4.0-11",
+    "citation-js": "^0.4.0",
     "classnames": "^2.2.6",
     "html-to-react": "^1.3.4",
     "immutable": "^4.0.0-rc.12",
@@ -67,6 +67,10 @@
     "lint-staged": "^8.1.7",
     "prettier-standard": "^9.1.1",
     "standard": "^12.0.1"
+  },
+  "resolutions": {
+    "@citation-js/plugin-wikidata": "0.4.0-rc.4",
+    "@citation-js/plugin-csl": "0.4.0-rc.4"
   },
   "standard": {
     "env": {
