--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "bluebird": "^3.5.2",
     "citation-js": "^0.4.0",
     "classnames": "^2.2.6",
+    "flow-typed": "^2.5.2",
     "html-to-react": "^1.3.4",
     "immutable": "^4.0.0-rc.12",
     "lodash": "^4.17.10",
@@ -81,6 +82,9 @@
     "parser": "babel-eslint",
     "plugins": [
       "flowtype"
+    ],
+    "ignore":[
+      "flow-typed"
     ]
   },
   "browserslist": [
