--- a/package.json
+++ b/package.json
@@ -5,19 +5,13 @@
     }
   },
   "lint-staged": {
-    "linters": {
-      "{src,lib,test,tests,__tests__,bin}/**/*.js": [
-        "prettier-standard",
-        "standard --fix",
-        "git add"
-      ],
-      "ignore": [
-        "**/__snapshots__/*"
-      ]
-    }
+    "*.js": [
+      "prettier --write",
+      "eslint --fix",
+      "git add"
+    ]
   },
   "scripts": {
-    "format": "prettier-standard src/**/*.js",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -58,6 +52,7 @@
   "devDependencies": {
     "@testing-library/react": "^8.0.1",
     "chance": "^1.0.16",
+    "eslint-config-prettier": "^4.3.0",
     "eslint-plugin-flowtype": "^3.9.1",
     "factory-girl": "^5.0.2",
     "flow-bin": "^0.100.0",
@@ -67,26 +62,15 @@
     "jest-fetch-mock": "^2.1.0",
     "lighthouse": "^5.1.0",
     "lint-staged": "^8.1.7",
-    "prettier-standard": "^9.1.1",
-    "standard": "^12.0.1"
+    "prettier": "1.18.0"
   },
   "resolutions": {
     "@citation-js/plugin-wikidata": "0.4.0-rc.4",
     "@citation-js/plugin-csl": "0.4.0-rc.4"
   },
-  "standard": {
-    "env": {
-      "browser": true,
-      "jest": true,
-      "es6": true
-    },
-    "parser": "babel-eslint",
-    "plugins": [
-      "flowtype"
-    ],
-    "ignore": [
-      "flow-typed"
-    ]
+  "prettier": {
+    "semi": false,
+    "singleQuote": true
   },
   "browserslist": [
     ">0.2%",
