--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "@sentry/browser": "^5.4.0",
+    "@testing-library/jest-dom": "^4.0.0",
     "auth0-js": "^9.6.0",
     "bluebird": "^3.5.2",
     "citation-js": "^0.4.0",
@@ -58,7 +59,6 @@
     "flow-bin": "^0.103.0",
     "husky": "^3.0.1",
     "jest-date-mock": "^1.0.2",
-    "jest-dom": "^3.0.0",
     "jest-fetch-mock": "^2.1.0",
     "lighthouse": "^5.1.0",
     "lint-staged": "^9.2.1",
