--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     }
   },
   "lint-staged": {
-    "*.js": [
+    "src/**/*.js": [
       "prettier --write",
       "eslint --fix",
       "git add"
@@ -32,7 +32,7 @@
     "bluebird": "^3.5.2",
     "citation-js": "^0.4.0",
     "classnames": "^2.2.6",
-    "flow-typed": "^2.6.0",
+    "flow-typed": "^2.6.1",
     "html-to-react": "^1.3.4",
     "immer": "^3.1.2",
     "immutable": "^4.0.0-rc.12",
@@ -56,7 +56,7 @@
     "eslint-config-prettier": "^6.0.0",
     "eslint-plugin-flowtype": "^3.12.2",
     "factory-girl": "^5.0.2",
-    "flow-bin": "^0.104.0",
+    "flow-bin": "^0.107.0",
     "husky": "^3.0.1",
     "jest-date-mock": "^1.0.2",
     "jest-fetch-mock": "^2.1.0",
