--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,8 +18,11 @@
     },
     "plugins": [
         "react",
-        "flowtype"
+        "flowtype",
+        "react-hooks"
     ],
     "rules": {
+        "react-hooks/rules-of-hooks": "error",
+        "react-hooks/exhaustive-deps": "warn"
     }
 }
