--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "chance": "^1.0.16",
     "eslint-config-prettier": "^6.3.0",
     "eslint-plugin-flowtype": "^4.3.0",
+    "eslint-plugin-react-hooks": "^2.1.1",
     "factory-girl": "^5.0.2",
     "flow-bin": "^0.107.0",
     "husky": "^3.0.5",
