--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "bluebird": "^3.5.2",
     "citation-js": "^0.4.0",
     "classnames": "^2.2.6",
+    "exif-js": "^2.3.0",
     "flow-typed": "^2.6.1",
     "html-to-react": "^1.3.4",
     "immer": "^4.0.0",
