--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,12 @@
         "es6": true,
         "jest": true
     },
-    "extends": ["prettier", "plugin:flowtype/recommended"],
+    "extends": [
+        "prettier",
+        "plugin:flowtype/recommended",
+        "plugin:import/errors",
+        "plugin:import/warnings"
+    ],
     "globals": {
         "Atomics": "readonly",
         "SharedArrayBuffer": "readonly"
@@ -24,5 +29,12 @@
     "rules": {
         "react-hooks/rules-of-hooks": "error",
         "react-hooks/exhaustive-deps": "warn"
-    }
+    },
+    "settings": {
+        "import/resolver": {
+          "node": {
+            "moduleDirectory": ["node_modules", "src/"]
+          }
+        }
+      }
 }
