--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,7 +8,8 @@
         "prettier",
         "plugin:flowtype/recommended",
         "plugin:import/errors",
-        "plugin:import/warnings"
+        "plugin:import/warnings",
+        "plugin:compat/recommended"
     ],
     "globals": {
         "Atomics": "readonly",
