--- a/package.json
+++ b/package.json
@@ -28,6 +28,10 @@
   "dependencies": {
     "@sentry/browser": "^5.4.0",
     "@testing-library/jest-dom": "^4.0.0",
+    "@types/jest": "^24.0.19",
+    "@types/node": "^12.11.1",
+    "@types/react": "^16.9.9",
+    "@types/react-dom": "^16.9.2",
     "auth0-js": "^9.6.0",
     "bluebird": "^3.5.2",
     "citation-js": "^0.4.0",
@@ -48,7 +52,8 @@
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "^3.0.1",
-    "react-select": "^3.0.4"
+    "react-select": "^3.0.4",
+    "typescript": "^3.6.4"
   },
   "devDependencies": {
     "@testing-library/react": "^9.1.4",
