--- a/package.json
+++ b/package.json
@@ -67,8 +67,7 @@
     "jest-fetch-mock": "^2.1.0",
     "lighthouse": "^5.1.0",
     "lint-staged": "^9.2.5",
-    "prettier": "1.18.2",
-    "ts-migration": "quizlet/ts-migration.git"
+    "prettier": "1.18.2"
   },
   "resolutions": {
     "@citation-js/plugin-csl": "0.4.0-rc.4"
