Allow implicit any and skip lib check
These should be removed when all the errors have been fixed

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,9 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react",
-    "baseUrl": "src"
+    "baseUrl": "src",
+    "noImplicitAny": false,
+    "skipDefaultLibCheck": true
   },
   "include": [
     "src"
