--- a/package.json
+++ b/package.json
@@ -40,9 +40,11 @@
     "@testing-library/jest-dom": "^4.0.0",
     "@types/bluebird": "^3.5.28",
     "@types/jest": "^24.0.19",
+    "@types/lodash": "^4.14.144",
     "@types/node": "^12.11.1",
     "@types/react": "^16.9.9",
     "@types/react-dom": "^16.9.2",
+    "@types/react-router-dom": "^5.1.0",
     "auth0-js": "^9.6.0",
     "bluebird": "^3.5.2",
     "citation-js": "^0.4.0",
