--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
     "noEmit": true,
     "jsx": "react",
     "baseUrl": "src",
+    "downlevelIteration": true,
     "noImplicitAny": false,
     "skipDefaultLibCheck": true
   },
