--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,13 @@
 {
+    "parser": "@typescript-eslint/parser",
     "env": {
         "browser": true,
         "es6": true,
         "jest": true
     },
     "extends": [
+        "plugin:@typescript-eslint/recommended",
+        "plugin:react/recommended",
         "prettier",
         "plugin:import/errors",
         "plugin:import/warnings",
@@ -22,6 +25,7 @@
         "sourceType": "module"
     },
     "plugins": [
+        "@typescript-eslint",
         "react",
         "react-hooks"
     ],
@@ -34,6 +38,9 @@
           "node": {
             "moduleDirectory": ["node_modules", "src/"]
           }
+        },
+        "react": {
+            "version": "detect"
         }
       }
 }
