--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "dependencies": {
     "@sentry/browser": "^5.4.0",
     "@testing-library/jest-dom": "^4.0.0",
+    "@types/bluebird": "^3.5.28",
     "@types/jest": "^24.0.19",
     "@types/node": "^12.11.1",
     "@types/react": "^16.9.9",
