--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "@types/bluebird": "^3.5.28",
     "@types/jest": "^24.0.19",
     "@types/lodash": "^4.14.144",
+    "@types/moment": "^2.13.0",
+    "@types/moment-range": "^3.1.2",
     "@types/node": "^12.11.1",
     "@types/react": "^16.9.9",
     "@types/react-dom": "^16.9.2",
