--- a/package.json
+++ b/package.json
@@ -61,6 +61,8 @@
   },
   "devDependencies": {
     "@testing-library/react": "^9.1.4",
+    "@typescript-eslint/eslint-plugin": "^2.5.0",
+    "@typescript-eslint/parser": "^2.5.0",
     "chance": "^1.0.16",
     "eslint-config-prettier": "^6.3.0",
     "eslint-plugin-compat": "^3.3.0",
