--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -7,5 +7,5 @@ ports:
 
 # List the start up tasks. You can start them in parallel in multiple terminals. See https://www.gitpod.io/docs/44_config_start_tasks/
 tasks:
-- init: yarn
-  command: yarn test
+- before: nvm install && nvm use
+  init: yarn
