--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,13 +6,10 @@
         "jest": true
     },
     "extends": [
-        "eslint:recommended",
-        "plugin:react/recommended",
+        "react-app",
+        "plugin:import/typescript",
         "prettier/@typescript-eslint",
         "plugin:prettier/recommended",
-        "plugin:import/errors",
-        "plugin:import/warnings",
-        "plugin:import/typescript",
         "plugin:compat/recommended"
     ],
     "globals": {
