--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "chance": "^1.0.16",
     "eslint-config-prettier": "^6.3.0",
     "eslint-config-react": "^1.1.7",
+    "eslint-config-react-app": "^5.0.2",
     "eslint-plugin-compat": "^3.3.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-react-hooks": "^2.1.1",
