--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,7 @@
     },
     "extends": [
         "react-app",
+        "plugin:@typescript-eslint/recommended",
         "plugin:import/typescript",
         "prettier/@typescript-eslint",
         "plugin:prettier/recommended",
@@ -31,7 +32,8 @@
     ],
     "rules": {
         "react-hooks/rules-of-hooks": "error",
-        "react-hooks/exhaustive-deps": "warn"
+        "react-hooks/exhaustive-deps": "warn",
+        "@typescript-eslint/ban-ts-ignore": "warn"
     },
     "settings": {
         "import/resolver": {
