--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,7 @@
     },
     "extends": [
         "react-app",
+        "plugin:react/recommended",
         "plugin:@typescript-eslint/recommended",
         "plugin:import/typescript",
         "prettier/@typescript-eslint",
@@ -33,7 +34,8 @@
     "rules": {
         "react-hooks/rules-of-hooks": "error",
         "react-hooks/exhaustive-deps": "warn",
-        "@typescript-eslint/ban-ts-ignore": "warn"
+        "@typescript-eslint/ban-ts-ignore": "warn",
+        "react/prop-types": "warn"
     },
     "settings": {
         "import/resolver": {
