--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-ace": "^7.0.1",
     "react-bootstrap": "^1.0.0-beta.9",
     "react-dom": "^16.4.0",
+    "react-image-annotation": "^0.9.10",
     "react-markdown": "^4.0.3",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.0.0",
