Add method to check if the user can annotate fragments

--- a/src/auth/applicationScopes.json
+++ b/src/auth/applicationScopes.json
@@ -4,6 +4,7 @@
   "readFragments": "read:fragments",
   "transliterateFragments": "transliterate:fragments",
   "lemmatizeFragments": "lemmatize:fragments",
+  "annotateFragments": "annotate:fragments",
   "readBibliography": "read:bibliography",
   "writeBibliography": "write:bibliography",
   "readTexts": "read:texts",
