--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@types/node": "^12.11.1",
     "@types/react": "^16.9.9",
     "@types/react-dom": "^16.9.2",
+    "@types/react-router-bootstrap": "^0.24.5",
     "@types/react-router-dom": "^5.1.0",
     "auth0-js": "^9.6.0",
     "bluebird": "^3.5.2",
