--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@types/react-dom": "^16.9.2",
     "@types/react-router-bootstrap": "^0.24.5",
     "@types/react-router-dom": "^5.1.0",
+    "@types/react-select": "^3.0.10",
     "auth0-js": "^9.6.0",
     "bluebird": "^3.5.2",
     "citation-js": "^0.4.0",
