--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@sentry/browser": "^5.4.0",
     "@testing-library/jest-dom": "^4.0.0",
     "@types/bluebird": "^3.5.28",
+    "@types/classnames": "^2.2.9",
     "@types/jest": "^24.0.25",
     "@types/lodash": "^4.14.144",
     "@types/moment": "^2.13.0",
