--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "lodash": "^4.17.13",
     "moment": "^2.22.2",
     "moment-range": "^4.0.1",
+    "node-sass": "^4.13.1",
     "query-string": "^6.2.0",
     "react": "^16.8.0",
     "react-ace": "^8.0.0",
