--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -8,4 +8,4 @@ ports:
 # List the start up tasks. You can start them in parallel in multiple terminals. See https://www.gitpod.io/docs/44_config_start_tasks/
 tasks:
 - before: nvm install && nvm use
-  init: yarn
+  command: yarn
