Update gitpod config

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -7,7 +7,9 @@ ports:
 
 # List the start up tasks. You can start them in parallel in multiple terminals. See https://www.gitpod.io/docs/44_config_start_tasks/
 tasks:
-- before: nvm install && nvm use
+- before: |
+    nvm install
+    nvm use
   command: yarn
 
 vscode:
