--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -9,9 +9,11 @@ ports:
 tasks:
 - before: |
     nvm install
+    nvm alias default node
     nvm use
   command: yarn
 
 vscode:
   extensions:
     - Orta.vscode-jest@3.1.1:e5QDEGVUNAQFNn6OtB9Qmw==
+    - eamodio.gitlens@10.2.1:ZI2Sl3DHdJu4aG2wW92CQQ==
