--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --env=jest-environment-jsdom-sixteen",
     "eject": "react-scripts eject",
     "lighthouse": "node scripts/lighthouse.js"
   },
@@ -34,7 +34,6 @@
   },
   "dependencies": {
     "@sentry/browser": "^5.4.0",
-    "@testing-library/jest-dom": "^4.0.0",
     "@types/bluebird": "^3.5.28",
     "@types/classnames": "^2.2.9",
     "@types/jest": "^24.0.25",
@@ -73,7 +72,8 @@
     "typescript": "^3.6.4"
   },
   "devDependencies": {
-    "@testing-library/react": "^9.1.4",
+    "@testing-library/jest-dom": "^5.5.0",
+    "@testing-library/react": "^10.0.2",
     "@typescript-eslint/eslint-plugin": "^2.28.0",
     "@typescript-eslint/parser": "^2.28.0",
     "chance": "^1.0.16",
@@ -86,6 +86,7 @@
     "factory-girl": "^5.0.2",
     "husky": "^4.2.5",
     "jest-date-mock": "^1.0.2",
+    "jest-environment-jsdom-sixteen": "^1.0.3",
     "jest-fetch-mock": "^3.0.1",
     "lighthouse": "^5.1.0",
     "lint-staged": "^10.1.3",
