--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "node": "^13.0.1"
   },
   "dependencies": {
+    "@auth0/auth0-spa-js": "^1.7.0",
     "@sentry/browser": "^5.4.0",
     "@types/bluebird": "^3.5.28",
     "@types/classnames": "^2.2.9",
@@ -46,7 +47,6 @@
     "@types/react-router-bootstrap": "^0.24.5",
     "@types/react-router-dom": "^5.1.0",
     "@types/react-select": "^3.0.10",
-    "auth0-js": "^9.13.2",
     "bluebird": "^3.5.2",
     "citation-js": "^0.4.0",
     "classnames": "^2.2.6",
@@ -54,6 +54,7 @@
     "exif-js": "^2.3.0",
     "html-to-react": "^1.3.4",
     "immer": "^6.0.3",
+    "jwt-decode": "^2.2.0",
     "lodash": "^4.17.13",
     "moment": "^2.22.2",
     "moment-range": "^4.0.1",
