--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/bluebird": "^3.5.28",
     "@types/classnames": "^2.2.9",
     "@types/jest": "^24.0.25",
+    "@types/jwt-decode": "^2.2.1",
     "@types/lodash": "^4.14.144",
     "@types/moment": "^2.13.0",
     "@types/moment-range": "^4.0.0",
