--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "react-markdown": "^4.0.3",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "3.4.1",
     "react-select": "^3.0.4",
     "typescript": "^3.6.4"
   },
@@ -84,7 +84,6 @@
     "eslint-config-react-app": "^5.2.1",
     "eslint-plugin-compat": "^3.5.1",
     "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-react-hooks": "^3.0.0",
     "factory-girl": "^5.0.2",
     "husky": "^4.2.5",
     "jest-date-mock": "^1.0.2",
