--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     ]
   },
   "scripts": {
-    "start": "BROWSER=google-chrome-stable react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jest-environment-jsdom-sixteen",
     "eject": "react-scripts eject",
