--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "@auth0/auth0-spa-js": "^1.7.0",
     "@sentry/browser": "^5.4.0",
+    "@testing-library/user-event": "^12.1.3",
     "@types/bluebird": "^3.5.28",
     "@types/classnames": "^2.2.9",
     "@types/jest": "^24.0.25",
@@ -70,6 +71,7 @@
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.4.1",
     "react-select": "^3.0.4",
+    "react-select-event": "^5.0.0",
     "typescript": "^3.6.4"
   },
   "devDependencies": {
