Install correct Node in Gitpod Dockerfile

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -7,11 +7,7 @@ ports:
 
 # List the start up tasks. You can start them in parallel in multiple terminals. See https://www.gitpod.io/docs/44_config_start_tasks/
 tasks:
-- before: |
-    nvm install
-    nvm alias default node
-    nvm use
-  command: yarn
+- command: yarn
 
 vscode:
   extensions:
