--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   },
   "dependencies": {
     "@auth0/auth0-spa-js": "^1.7.0",
-    "@sentry/browser": "^5.4.0",
+    "@sentry/react": "^5.23.0",
     "@types/bluebird": "^3.5.28",
     "@types/classnames": "^2.2.9",
     "@types/jest": "^24.0.25",
