Add script for linting

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ jobs:
     - chmod +x ./cc-test-reporter
     - "./cc-test-reporter before-build"
     script:
-    - yarn eslint --ext .ts,.tsx src/
+    - yarn lint
     - yarn tsc
     - yarn test --coverage --forceExit --detectOpenHandles
     after_script: "./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT"
