--- a/package.json
+++ b/package.json
@@ -32,6 +32,12 @@
     "yarn": "^1.5.1",
     "node": "^14.2.0"
   },
+  "jest": {
+    "reporters": [
+      "default",
+      "jest-summary-reporter"
+    ]
+  },
   "dependencies": {
     "@auth0/auth0-spa-js": "^1.7.0",
     "@sentry/browser": "^5.4.0",
@@ -55,6 +61,7 @@
     "exif-js": "^2.3.0",
     "html-to-react": "^1.3.4",
     "immer": "^7.0.5",
+    "jest-summary-reporter": "^0.0.2",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.19",
     "moment": "^2.22.2",
