--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,7 +12,8 @@
         "plugin:import/typescript",
         "prettier/@typescript-eslint",
         "plugin:prettier/recommended",
-        "plugin:compat/recommended"
+        "plugin:compat/recommended",
+        "plugin:testing-library/react"
     ],
     "globals": {
         "Atomics": "readonly",
@@ -29,7 +30,8 @@
         "@typescript-eslint",
         "react",
         "react-hooks",
-        "prettier"
+        "prettier",
+        "testing-library"
     ],
     "rules": {
         "react-hooks/rules-of-hooks": "error",
