--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "eslint-config-react-app": "^5.2.1",
     "eslint-plugin-compat": "^3.5.1",
     "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-testing-library": "^3.8.0",
     "factory-girl": "^5.0.2",
     "husky": "^4.2.5",
     "jest-date-mock": "^1.0.2",
