--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,7 +13,8 @@
         "prettier/@typescript-eslint",
         "plugin:prettier/recommended",
         "plugin:compat/recommended",
-        "plugin:testing-library/react"
+        "plugin:testing-library/react",
+        "plugin:jest-dom/recommended"
     ],
     "globals": {
         "Atomics": "readonly",
@@ -31,7 +32,8 @@
         "react",
         "react-hooks",
         "prettier",
-        "testing-library"
+        "testing-library",
+        "jest-dom"
     ],
     "rules": {
         "react-hooks/rules-of-hooks": "error",
