--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,6 +6,7 @@
         "jest": true
     },
     "extends": [
+        "eslint:recommended",
         "react-app",
         "plugin:react/recommended",
         "plugin:@typescript-eslint/recommended",
