Make camelcase rule an error
Some DTOs need camelcase names at the moment,
because they match how the data is received
from the API.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -37,6 +37,7 @@
         "jest-dom"
     ],
     "rules": {
+        "camelcase": "error",
         "react-hooks/rules-of-hooks": "error",
         "react-hooks/exhaustive-deps": "warn",
         "@typescript-eslint/ban-ts-comment": "warn",
