--- a/.travis.yml
+++ b/.travis.yml
@@ -2,16 +2,20 @@ language: node_js
 jobs:
   include:
   - stage: test
+    script: yarn lint
+    name: "Lint"
+  -
+    script: yarn tsc
+    name: "Compile"
+  - 
     before_script:
     - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64
       > ./cc-test-reporter
     - chmod +x ./cc-test-reporter
     - "./cc-test-reporter before-build"
-    script:
-    - yarn lint
-    - yarn tsc
-    - yarn test --coverage --forceExit --detectOpenHandles
+    script: yarn test --coverage --forceExit --detectOpenHandles
     after_script: "./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT"
+    name: "Unit Tests"
   - stage: deploy
     install: skip
     script: skip
