Add Sass extension to Gitpod

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -15,3 +15,4 @@ vscode:
     - DavidAnson.vscode-markdownlint@0.36.3:rP8OhcezPp70k1tUGpNulw==
     - dbaeumer.vscode-eslint@2.1.8:02aHhbJ0Q4aGdjHXlTdVKg==
     - esbenp.prettier-vscode@5.5.0:xcEnHt0vYXkhJ8IkBmNAuA==
+    - syler.sass-indented@1.8.11:ct8RQj0VKMLMB3AxMffWhg==
