--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "classnames": "^2.2.6",
     "eslint-plugin-prettier": "^3.1.3",
     "exif-js": "^2.3.0",
+    "fast-xml-parser": "^3.17.4",
     "html-to-react": "^1.3.4",
     "immer": "^7.0.5",
     "jwt-decode": "^2.2.0",
