--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -8,7 +8,7 @@ ports:
 
 # List the start up tasks. You can start them in parallel in multiple terminals. See https://www.gitpod.io/docs/44_config_start_tasks/
 tasks:
-- command: yarn
+- init: yarn
 
 vscode:
   extensions:
