--- a/.env.test
+++ b/.env.test
@@ -2,5 +2,6 @@ REACT_APP_AUTH0_DOMAIN=example.com
 REACT_APP_AUTH0_CLIENT_ID=test-client-id
 REACT_APP_AUTH0_REDIRECT_URI=http://example.com/callback
 REACT_APP_AUTH0_RETURN_TO=http://example.com
+REACT_APP_AUTH0_AUDIENCE=dictionary-api
 REACT_APP_DICTIONARY_API_URL=http://example.com
 REACT_APP_SENTRY_DSN=http://example.com/sentry
