--- a/package.json
+++ b/package.json
@@ -57,11 +57,13 @@
     "bluebird": "^3.5.2",
     "citation-js": "^0.4.0",
     "classnames": "^2.2.6",
+    "docx": "^5.3.0",
     "eslint-plugin-prettier": "^3.1.3",
     "exif-js": "^2.3.0",
     "fast-xml-parser": "^3.17.4",
     "html-to-react": "^1.3.4",
     "immer": "^7.0.5",
+    "jquery": "^3.5.1",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.19",
     "moment": "^2.22.2",
@@ -78,6 +80,7 @@
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.4.3",
     "react-select": "^3.0.4",
+    "rgb-hex": "^3.0.0",
     "typescript": "^4.0.2"
   },
   "devDependencies": {
