--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,15 +27,15 @@ jobs:
         with:
           node-version: '14.x'
 
-      # Runs a single command using the runners shell
+      - name: Install
+        run: yarn install --dev --frozen-lockfile
+
       - name: Lint
         run: yarn lint
      
-     # Runs a single command using the runners shell
       - name: Compile
         run: yarn tsc
 
-      # Runs a set of commands using the runners shell
       - name: Unit Tests
         env:
           CI: true
