--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,3 +45,11 @@ jobs:
       - uses: paambaati/codeclimate-action@v2.7.4
         env:
           CC_TEST_REPORTER_ID: ${{ secrets.TEST_REPORTER_ID }}
+
+      - uses: akhileshns/heroku-deploy@v3.6.8
+        with:
+          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+          heroku_app_name:  ${{secrets.HEROKU_APP_NAME}}
+          heroku_email:  ${{secrets.HEROKU_EMAIL}}
+          branch: "master"
+          healthcheck: "https://www.ebabylon.org"
