Run lint, compile and test if install is success

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,19 +20,22 @@ jobs:
           node-version: '14'
 
       - name: Install
+        id: install
         run: yarn install --dev --frozen-lockfile
 
       - name: Lint
+        if: ${{ steps.install.outcome == success }}
         run: yarn lint
      
       - name: Compile
+        if: ${{ steps.install.outcome == success }}
         run: yarn tsc
 
       - name: Unit Tests
+        if: ${{ steps.install.outcome == success }}
         env:
           CI: true
-        run: |
-          yarn test --coverage --forceExit --detectOpenHandles
+        run: yarn test --coverage --forceExit --detectOpenHandles
           
       - uses: paambaati/codeclimate-action@v2.7.4
         env:
