Fix step conditions

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,22 +24,22 @@ jobs:
         run: yarn install --dev --frozen-lockfile
 
       - name: Lint
-        if: steps.install.outcome == 'success'
+        if: success() || steps.install.outcome == 'success'
         run: yarn lint
      
       - name: Compile
-        if: steps.install.outcome == 'success'
+        if: success() || steps.install.outcome == 'success'
         run: yarn tsc
 
       - name: Unit Tests
         id: unit_tests
-        if: steps.install.outcome == 'success'
+        if: success() || steps.install.outcome == 'success'
         env:
           CI: true
         run: yarn test --coverage --forceExit --detectOpenHandles
           
       - uses: paambaati/codeclimate-action@v2.7.4
-        if: steps.unit_tests.outcome == 'success' || steps.unit_tests.outcome == 'failure'
+        if: success() || steps.unit_tests.outcome == 'failure'
         env:
           CC_TEST_REPORTER_ID: ${{ secrets.TEST_REPORTER_ID }}
   
