--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/bluebird": "^3.5.28",
     "@types/classnames": "^2.2.9",
     "@types/jest": "^24.0.25",
+    "@types/jquery": "^3.5.5",
     "@types/jwt-decode": "^2.2.1",
     "@types/lodash": "^4.14.144",
     "@types/node": "^14.0.1",
@@ -61,6 +62,7 @@
     "eslint-plugin-prettier": "^3.1.3",
     "exif-js": "^2.3.0",
     "fast-xml-parser": "^3.17.4",
+    "file-saver": "^2.0.5",
     "html-to-react": "^1.3.4",
     "immer": "^7.0.5",
     "jquery": "^3.5.1",
