--- a/package.json
+++ b/package.json
@@ -117,7 +117,7 @@
     "not ie <= 11",
     "not op_mini all",
     "not safari < 12",
-    "not ios < 14",
+    "not ios <= 14.3",
     "not chrome < 66",
     "not and_chr <= 78",
     "not kaios <= 2.5",
