--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/bluebird": "^3.5.28",
     "@types/classnames": "^2.2.9",
     "@types/jest": "^24.0.25",
+    "@types/jquery": "^3.5.5",
     "@types/jwt-decode": "^2.2.1",
     "@types/lodash": "^4.14.144",
     "@types/node": "^14.0.1",
@@ -57,11 +58,14 @@
     "bluebird": "^3.5.2",
     "citation-js": "^0.4.0",
     "classnames": "^2.2.6",
+    "docx": "^5.4.1",
     "eslint-plugin-prettier": "^3.1.3",
     "exif-js": "^2.3.0",
     "fast-xml-parser": "^3.17.4",
+    "file-saver": "^2.0.5",
     "html-to-react": "^1.3.4",
     "immer": "^8.0.1",
+    "jquery": "^3.5.1",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.19",
     "moment": "^2.22.2",
@@ -78,6 +82,7 @@
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.4.3",
     "react-select": "^3.0.4",
+    "rgb-hex": "^3.0.0",
     "typescript": "^4.0.2"
   },
   "devDependencies": {
