--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -109,6 +109,7 @@ jobs:
             REACT_APP_DICTIONARY_API_URL=https://api.cluster.ebabylon.org
             REACT_APP_SENTRY_DSN=${{ secrets.REACT_APP_SENTRY_DSN }}
           context: .
+          file: ./Dockerfile
           push: true
           tags: |
             jlaasonen/ebl-frontend:test
