Replacte Moment with Luxon

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/bluebird": "^3.5.28",
     "@types/jquery": "^3.5.5",
     "@types/lodash": "^4.14.144",
+    "@types/luxon": "^2.0.9",
     "@types/node": "^16.11.10",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
@@ -71,8 +72,7 @@
     "jspdf": "^2.3.0",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.19",
-    "moment": "^2.22.2",
-    "moment-range": "^4.0.1",
+    "luxon": "^2.3.1",
     "node-sass": "^6.0.1",
     "prettier": "2.1.1",
     "query-string": "^7.0.1",
