--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "eBL",
-  "name": "Electronic Babylonian Literature",
+  "name": "electronic Babylonian Library",
   "icons": [
     {
       "src": "favicon.ico",
