Add submit corrections button (#299)
* Add button component

* Add test

* Update snapshots

* Add email

* Use env `REACT_APP_CORRECTIONS_EMAIL`

* Add tooltip

* Add URL & update tooltip

* Update email

* Update test

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -76,6 +76,7 @@ jobs:
         with:        
           build-args: |
             REACT_APP_AUTH0_DOMAIN=auth.ebl.lmu.de
+            REACT_APP_CORRECTIONS_EMAIL=ebl-support+corrections@culture.lmu.de
             REACT_APP_AUTH0_CLIENT_ID=${{ secrets.REACT_APP_AUTH0_CLIENT_ID }}
             REACT_APP_AUTH0_AUDIENCE=${{ secrets.REACT_APP_AUTH0_AUDIENCE }}
             REACT_APP_DICTIONARY_API_URL=/api
@@ -119,6 +120,7 @@ jobs:
         with:        
           build-args: |
             REACT_APP_AUTH0_DOMAIN=auth.ebl.lmu.de
+            REACT_APP_CORRECTIONS_EMAIL=ebl-support+corrections@culture.lmu.de
             REACT_APP_AUTH0_CLIENT_ID=${{ secrets.REACT_APP_AUTH0_CLIENT_ID }}
             REACT_APP_AUTH0_AUDIENCE=${{ secrets.REACT_APP_AUTH0_AUDIENCE }}
             REACT_APP_DICTIONARY_API_URL=/test/api
