Add Italian Nineveh to Scopes

--- a/src/auth/applicationScopes.json
+++ b/src/auth/applicationScopes.json
@@ -25,4 +25,5 @@
   "readCAICFragments": "read:CAIC-fragments",
   "readSipparLibraryFragments": "read:SIPPARLIBRARY-fragments",
   "readUrukLBUFragments": "read:URUKLBU-fragments"
+  "readItalianNinevehFragments": "read:ITALIANNINEVEH-fragments",
 }
