--- a/src/auth/applicationScopes.json
+++ b/src/auth/applicationScopes.json
@@ -10,17 +10,17 @@
   "readTexts": "read:texts",
   "writeTexts": "write:texts",
   "accessBeta": "access:beta",
-  "readWglFolios": "read:WGL-folios",
-  "readFwgFolios": "read:FWG-folios",
-  "readElFolios": "read:EL-folios",
-  "readAkgFolios": "read:AKG-folios",
-  "readMjgFolios": "read:MJG-folios",
-  "readUskFolios": "read:USK-folios",
-  "readIlfFolios": "read:ILF-folios",
-  "readArgFolios": "read:ARG-folios",
-  "readUgFolios": "read:UG-folios",
-  "readErFolios": "read:ER-folios",
-  "readGsFolios": "read:GS-folios",
+  "readWGLFolios": "read:WGL-folios",
+  "readFWGFolios": "read:FWG-folios",
+  "readELFolios": "read:EL-folios",
+  "readAKGFolios": "read:AKG-folios",
+  "readMJGFolios": "read:MJG-folios",
+  "readUSKFolios": "read:USK-folios",
+  "readILFFolios": "read:ILF-folios",
+  "readARGFolios": "read:ARG-folios",
+  "readUGFolios": "read:UG-folios",
+  "readERFolios": "read:ER-folios",
+  "readGSFolios": "read:GS-folios",
   "readEVWFolios": "read:EVW-folios",
   "readCAICFragments": "read:CAIC-fragments",
   "readSipparLibraryFragments": "read:SIPPARLIBRARY-fragments",
